<resources>
    <string name="app_name">Android</string>
    <string name="action_settings">Settings</string>

    <string name="exit">Salir</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="authenticate">Autentificar</string>
    <string name="noInternet">No hay una conexión de red disponible</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="consult">Consultar</string>
    <string name="clear">Limpiar</string>
    <string name="save">Guardarr</string>
</resources>
