<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/escudoLoginID"
            android:src="@drawable/encriptacion"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_nombre_usuarioID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/escudoLoginID">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usuarioID"
                android:hint="@string/user"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password_usuarioID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_nombre_usuarioID">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordID"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/autentificarID"
            style="@style/ButtonYellowValidaUsuario"
            android:layout_below="@id/input_password_usuarioID"
            android:text="@string/authenticate"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_selector"/>

    </RelativeLayout>

</RelativeLayout>
